--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,11 +41,14 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@rainbow-me/rainbowkit": "^2.2.8",
     "@solana/wallet-adapter-base": "^0.9.24",
     "@solana/wallet-adapter-react": "^0.15.36",
     "@solana/wallet-adapter-react-ui": "^0.9.36",
     "@solana/wallet-adapter-wallets": "^0.19.33",
     "@solana/web3.js": "^1.98.0",
+    "@tanstack/react-query": "^5.83.0",
+    "@wagmi/core": "^2.18.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.8.3",
     "class-variance-authority": "^0.7.1",
@@ -72,6 +75,8 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
+    "viem": "^2.33.1",
+    "wagmi": "^2.16.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
