--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,11 +42,6 @@
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@rainbow-me/rainbowkit": "^2.2.8",
-    "@solana/wallet-adapter-base": "^0.9.24",
-    "@solana/wallet-adapter-react": "^0.15.36",
-    "@solana/wallet-adapter-react-ui": "^0.9.36",
-    "@solana/wallet-adapter-wallets": "^0.19.33",
-    "@solana/web3.js": "^1.98.0",
     "@tanstack/react-query": "^5.83.0",
     "@wagmi/core": "^2.18.0",
     "autoprefixer": "^10.4.20",
@@ -54,7 +49,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
-    "date-fns": "4.1.0",
+    "date-fns": "^3.6.0",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "latest",
     "groq-sdk": "^0.17.0",
