--- a/frontend/package.json
+++ b/frontend/package.json
@@ -72,7 +72,8 @@
     "vaul": "^0.9.6",
     "viem": "^2.33.1",
     "wagmi": "^2.16.0",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "pino-pretty": "^10.3.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
